runtime/runtime-params-estimator/estimator-warehouse/src/snapshots/estimator_warehouse__check__tests__check_command.snap
---
source: runtime/runtime-params-estimator/estimator-warehouse/src/check.rs
expression: report.to_string()
---
## Report 
*Status: Warn*
*Current commit:         0004a*
*Compared to:         0003a*
### Relative gas estimation changes above threshold: 1
```
LogBase                                         4.00 Ggas ➜        5.00 Ggas (+25.00%)
```
### Gas estimator uncertain changes: 1
```
UncertainTest                                               NEGATIVE-COST ➜ HIGH-VARIANCE                   
```

