runtime/runtime-params-estimator/estimator-warehouse/src/snapshots/estimator_warehouse__check__tests__check_command_for_uncertain_changes-3.snap
---
source: runtime/runtime-params-estimator/estimator-warehouse/src/check.rs
assertion_line: 318
expression: report.to_string()
---
## Report 
*Status: Warn*
*Current commit:         0000b*
*Compared to:         0004a*
### Relative gas estimation changes above threshold: 1
```
LogBase                                         5.00 Ggas ➜        6.00 Ggas (+20.00%)
```
### Gas estimator uncertain changes: 1
```
LogBase                                                     HIGH-VARIANCE ➜ NEGATIVE-COST                   
```

