runtime/runtime-params-estimator/estimator-warehouse/src/snapshots/estimator_warehouse__check__tests__check_command_for_uncertain_changes-4.snap
---
source: runtime/runtime-params-estimator/estimator-warehouse/src/check.rs
assertion_line: 322
expression: report.to_string()
---
## Report 
*Status: Warn*
*Current commit:         0000b*
*Compared to:         0004a*
### Relative gas estimation changes above threshold: 2
```
AltBn128MultiExp                                    0 gas ➜           10 gas (+inf%)
LogByte                                        15.00 Mgas ➜       20.00 Mgas (+33.33%)
```
### Gas estimator uncertain changes: 0

