runtime/runtime-params-estimator/estimator-warehouse/src/snapshots/estimator_warehouse__check__tests__check_command_for_uncertain_changes.snap
---
source: runtime/runtime-params-estimator/estimator-warehouse/src/check.rs
assertion_line: 296
expression: report.to_string()
---
## Report 
*Status: Warn*
*Current commit:         0004a*
*Compared to:         0003a*
### Relative gas estimation changes above threshold: 1
```
LogBase                                         4.00 Ggas ➜        5.00 Ggas (+25.00%)
```
### Gas estimator uncertain changes: 2
```
LogBase                                                              None ➜ HIGH-VARIANCE                   
LogByte                                        BLOCK-MEASUREMENT-OVERHEAD ➜ None                            
```

